# Gst-Inference-Windows

./: README.md  meson.build
ext/opencv/: gstinferenceoverlay.cc  meson.build
ext/r2inference/: gstmobilenetv2ssd.c  gsttinyyolov2.c  meson.build
gst-libs/gst/opencv/: meson.build
gst-libs/gst/r2inference/: gstchildinspector.c  gstinferencemeta.c  gstinferencepostprocess.c  gstinferenceprediction.c  gstinferencepreprocess.c  meson.build
gst/inferenceutils/: gstinferencecrop.cc
tests/: meson.build
tests/examples/classification/: gstclassification.c  meson.build
tests/examples/detection/: gstdetection.c
tests/my-examples/: meson.build
